<resources>

    <string name="app_name">電腦猜拳遊戲</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_com_play">電腦出拳：</string>
    <string name="prompt_my_play">玩家出拳：</string>
    <string name="play_scissors">剪刀</string>
    <string name="play_stone">石頭</string>
    <string name="play_paper">布</string>
    <string name="player_win">恭喜，你贏了！</string>
    <string name="player_lose">很可惜，你輸了！</string>
    <string name="player_draw">雙方平手！</string>
    <string name="prompt_title">和電腦猜拳</string>
    <string name="result">判定輸贏：</string>

    <string name="total_set">全部局數：</string>
    <string name="player_win_set">玩家贏：</string>
    <string name="comupter_win_set">電腦贏：</string>
    <string name="draw">平手：</string>

    <string name="btn_show_result1">顯示結果1</string>
    <string name="btn_show_result2">顯示結果2</string>
    <string name="btn_hidden_result">隱藏結果</string>

</resources>
