<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_title"
        android:textSize="40sp"
        android:textColor="#FF00FF"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView android:id="@+id/txtCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_com_play"
        android:layout_below="@id/txtTitle"
        android:layout_alignLeft="@id/txtTitle"
        android:textSize="20sp" />

    <TextView android:id="@+id/txtMyPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_my_play"
        android:layout_below="@id/txtTitle"
        android:layout_alignRight="@id/txtTitle"
        android:textSize="20sp" />

    <ImageButton android:id="@+id/imgBtnScissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/scissors"
        android:layout_below="@id/txtMyPlay"
        android:layout_alignLeft="@id/txtMyPlay"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <ImageView android:id="@+id/imgViewComPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgBtnScissors"
        android:layout_alignLeft="@id/txtCom" />

    <ImageButton android:id="@+id/imgBtnStone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stone"
        android:layout_below="@id/imgBtnScissors"
        android:layout_alignLeft="@id/imgBtnScissors"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <ImageButton android:id="@+id/imgBtnPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/paper"
        android:layout_below="@id/imgBtnStone"
        android:layout_alignLeft="@id/imgBtnStone"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <TextView android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_below="@id/imgBtnPaper"
        android:layout_alignLeft="@id/txtCom"
        android:textSize="20sp"
        android:textColor="#0000FF" />

    <Button
        android:id="@+id/btnShowResult1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_result1"
        android:layout_below="@id/txtResult"
        android:layout_alignLeft="@id/txtCom"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnShowResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_result2"
        android:layout_below="@id/txtResult"
        android:layout_alignLeft="@id/imgBtnPaper"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnHiddenResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_hidden_result"
        android:layout_below="@id/btnShowResult1"
        android:layout_centerInParent="true"
        android:textSize="20sp" />

</RelativeLayout>
